<resources>
    <string name="app_name">UI Fundamentals</string>
    <string name="Red">Red</string>
    <string name="Orange">Orange</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="Indigo">Indigo</string>
    <string name="Violet">Violet</string>
    <string name="Yellow">Yellow</string>
    <color name="Red">#f00</color>
    <color name="Orange">#ffa500</color>
    <color name="Yellow">#ffff00</color>
    <color name="Green">#0f0</color>
    <color name="Blue">#00f</color>
    <color name="Indigo">#4b0082</color>
    <color name="Violet">#ee82ee</color>
    <color name="Black">#000</color>
    <color name="White">#ffff</color>
    <dimen name="T30">30dp</dimen>






</resources>
